2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Mark Wielaard  <mark@klomp.org>

        * java/net/URL.java (URL(URL,String,URLStreamHandler)): Add spec
        to MalformedURLException.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Michael Koch  <konqueror@gmx.de>

        * java/net/ServerSocket.java
        (getChannel): Improved javadoc comment.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

        * include/Makefile.am:
	Don't generate JNI headers for removed files.

        * libraries/clib/native/Makefile.am:
	Removed character set conversion sources.

        * libraries/clib/nio/Makefile.am:
	Added iconv linking flags.

        * libraries/javalib/Makefile.am.in:
	Removed serializes converters.

        * libraries/javalib/META-INF/services/java.nio.charset.spi.CharsetProvider:
	New file.

        * test/regression/CharCvt.java:
	Adapted to nio.

        * test/regression/Makefile.am:
	Taken out the sysdepCallMethod test as such things should now be tested in
	the JNI module.

        * developers/Encode.java,
        developers/EncodeEUC_JP.java,
        libraries/clib/native/ByteToCharDefault.c,
        libraries/clib/native/ByteToCharIconv.c,
        libraries/clib/native/CharToByteDefault.c,
        libraries/clib/native/CharToByteIconv.c,
        libraries/javalib/java/lang/String.java,
        libraries/javalib/kaffe/io/ByteToChar8859_1.java,
        libraries/javalib/kaffe/io/ByteToChar8859_2.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_3.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_4.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_5.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_6.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_7.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_8.ser,
        libraries/javalib/kaffe/io/ByteToChar8859_9.ser,
        libraries/javalib/kaffe/io/ByteToCharASCII.ser,